# realtime-whisper-subtitles-optimized

./: .dockerignore  .env.cpu.example  .env.example  .env.gpu.example  .env.gpu.working.example  .gitattributes  .gitignore  CLEANUP.md  DOCKER_FIX_GUIDE.md  Dockerfile  Dockerfile.cpu  Dockerfile.emergency  Dockerfile.gpu  Dockerfile.gpu.fixed  Dockerfile.gpu.lite  Dockerfile.gpu.nightly  Dockerfile.gpu.stable  Dockerfile.gpu.working  FIX_SUMMARY.md  GPU_BUILD_FIX_GUIDE.md  LICENSE  README.md  README_GPU.md  SETUP.md  cleanup_deprecated.sh  debug_container.py  debug_script.py  diagnose_docker_build.sh  docker-compose.cpu.yml  docker-compose.emergency.yml  docker-compose.gpu.working.yml  docker-compose.gpu.yml  docker-compose.prod.yml  docker-compose.yml  emergency_fix_webrtc.sh  fix_abi_compatibility.sh  fix_cuda_image.sh  fix_docker_build.sh  fix_docker_images.sh  fix_gpu_docker_build.sh  (+17 more)
config/: prometheus.yml  redis.conf
config/grafana/dashboards/: dashboard.yml  whisper-dashboard.json
config/grafana/datasources/: prometheus.yml
config/nginx/: nginx.conf
scripts/: cleanup.sh  setup.sh  start.sh
src/: __init__.py  audio_processing.py  monitoring.py  utils.py  web_interface.py  web_interface_fixed.py  whisper_optimizer.py
static/: app.js
templates/: index.html
